// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IntensitySparkline Gradient and Markers should handle custom color override 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,20 L 60,19.04 L 116,18.368000000000002"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294901760,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Gradient and Markers should render markers for all readings 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,29.6 L 60,25.76 L 116,23.072000000000003"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={29.6}
        fill={
          {
            "payload": 4285046584,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Gradient and Markers should render with gradient stroke 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 L 60,23.520000000000003 L 116,21.504"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with all intensity markers 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 L 60,25.44 L 116,24.768"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with custom color 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 L 60,22.560000000000002 L 116,19.872000000000003"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "payload": 4294929259,
            "type": 0,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`IntensitySparkline Snapshot Tests should match snapshot with typical intensity pattern 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "justifyContent": "center",
    }
  }
>
  <RNSVGSvgView
    bbHeight={40}
    bbWidth={120}
    focusable={false}
    height={40}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "flex": 0,
          "height": 40,
          "width": 120,
        },
      ]
    }
    width={120}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGLinearGradient
          gradient={
            [
              0,
              640580914,
              0.1,
              643140399,
              0.2,
              644390712,
              0.3,
              653895717,
              0.4,
              654282496,
              0.5,
              653224960,
              0.6,
              652628224,
              0.7,
              651707157,
              0.8,
              650520616,
              0.9,
              653017210,
              1,
              648759228,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="painGradientBg"
          x1="0"
          x2="0"
          y1="1"
          y2="0"
        />
        <RNSVGLinearGradient
          gradient={
            [
              0,
              -13730510,
              0.1,
              -11171025,
              0.2,
              -9920712,
              0.3,
              -415707,
              0.4,
              -28928,
              0.5,
              -1086464,
              0.6,
              -1683200,
              0.7,
              -2604267,
              0.8,
              -3790808,
              0.9,
              -1294214,
              1,
              -5552196,
            ]
          }
          gradientTransform={null}
          gradientUnits={1}
          name="painGradientLine"
          x1="0"
          x2="0"
          y1={36}
          y2={4}
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "painGradientBg",
            "type": 1,
          }
        }
        height={40}
        propList={
          [
            "fill",
          ]
        }
        rx={4}
        width={120}
        x={0}
        y={0}
      />
      <RNSVGPath
        d="M 4,26.4 L 60,25.44 L 116,24.768"
        fill={null}
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
            "strokeLinecap",
            "strokeLinejoin",
          ]
        }
        stroke={
          {
            "brushRef": "painGradientLine",
            "type": 1,
          }
        }
        strokeLinecap={1}
        strokeLinejoin={1}
        strokeWidth={2}
      />
      <RNSVGCircle
        cx={4}
        cy={26.4}
        fill={
          {
            "payload": 4294551589,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={20}
        fill={
          {
            "payload": 4293880832,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={13.600000000000001}
        fill={
          {
            "payload": 4292363029,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={7.199999999999999}
        fill={
          {
            "payload": 4293673082,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={10.399999999999999}
        fill={
          {
            "payload": 4291176488,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={16.8}
        fill={
          {
            "payload": 4293284096,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
      <RNSVGCircle
        cx={60}
        cy={23.2}
        fill={
          {
            "payload": 4294938368,
            "type": 0,
          }
        }
        propList={
          [
            "fill",
            "stroke",
            "strokeWidth",
          ]
        }
        r={3}
        stroke={
          {
            "payload": 4294967295,
            "type": 0,
          }
        }
        strokeWidth={1.5}
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;
